--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,52 @@
-/*---------------------------------colors*/
-.header, .footer, .social-links {
-    background-color: #898B8C;
+.container-fluid {
+    width: 100%;
+    margin: 0px;
+     
+}
+
+
+/*---------------------------------navbar*/
+
+.navbar {
+    background-color: #6B6E6D;
     color: #DBD5BF;
-
+    font-family: "Karla", sans-serif;
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    top: 0;
 }
 
-
-
-/*---------------------------------header*/
-
-.header {
-   font-family: "Karla", sans-serif;   
-   text-align: center;
-}
 
 
 
 /*---------------------------------footer*/
 
 .footer {
-     font-family: "Karla", sans-serif;
-     text-align: center;
-  }
+    background-color: #6B6E6D;
+    color: #DBD5BF;
+    font-family: "Karla", sans-serif;
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+}
+
+
+
+/*-----------------------------------links*/
+
+a {
+    color: #DBD5BF;
+}
+
+a:hover {
+    color: #EBF0ED;
+    text-decoration: none;
+}
+
+.social-links { 
+     border-radius: 50%;
+    
+}
 
