--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,20 @@
+/*----------------------------body*/
+
+.bg {
+    background-image: url("/assets/images/fabian-grohs-7U-67_T_J34-unsplash.jpg");
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
+
+/*-----------------------------container-fluid*/
+
 .container-fluid {
     width: 100%;
     margin: 0px;
-     
+
 }
 
 
@@ -45,9 +58,9 @@ a:hover {
     text-decoration: none;
 }
 
-.social-links { 
-     border-radius: 50%;
-    
+.social-links {
+    border-radius: 50%;
+
 }
 
 
@@ -65,4 +78,32 @@ ul {
     display: inline-block;
     margin: 0;
     padding: 0;
+}
+
+/*--------------------------------------img-fluid*/
+
+.img-fluid {
+    max-width: 100%;
+    height: auto;
+}
+
+
+/*-------------------------------------------intro-text*/
+
+.intro-text {
+    margin-top: 300px;
+    margin-left: 150px;
+    font-family: "Karla", sans-serif;
+    font-weight: 800;
+    font-size: large;
+    letter-spacing: 3px;
+    color: #DBD5BF;
+}
+
+p {
+    margin-top: 25px;
+}
+
+h3 {
+    letter-spacing: !important;
 }
