--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,17 @@
 /*----------------------------body*/
 
+body {
+    background-image: url(../images/fabian-grohs-7U-67_T_J34-unsplash.jpg);
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+    background-color:  #6B6E6D;
+}
+
+/*------------------------------------------jumbotron*/
+
+
+
 /*-----------------------------container-fluid*/
 
 .container-fluid {
@@ -16,6 +28,7 @@
     color: #DBD5BF;
     font-family: "Karla", sans-serif;
     text-align: center;
+    text-transform: uppercase;
     position: absolute;
     width: 100%;
     top: 0;
@@ -36,7 +49,6 @@
     bottom: 0;
 }
 
-.tooltip .tooltip-text .facebook:hover {}
 
 
 /*-----------------------------------links*/
@@ -96,6 +108,3 @@ ul {
 p {
     margin-top: 25px;
 }
-
-
-/*------------------------------------------jumbotron*/
