--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,12 @@
 /*----------------------------body*/
 
 body {
-    background-image: url(../images/fabian-grohs-7U-67_T_J34-unsplash.jpg);
+    background-image: url("../assets/images/ales-nesetril-Im7lZjxeLhg-unsplash.jpg");
+    background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center;
-    background-attachment: fixed;
-    background-color:  #6B6E6D;
+    background-color: black;
+    
 }
-
-/*------------------------------------------jumbotron*/
-
-
 
 /*-----------------------------container-fluid*/
 
@@ -24,8 +20,7 @@ body {
 /*---------------------------------navbar*/
 
 .navbar {
-    background-color: #6B6E6D;
-    color: #DBD5BF;
+    color: #FAF5F7;
     font-family: "Karla", sans-serif;
     text-align: center;
     text-transform: uppercase;
@@ -35,18 +30,23 @@ body {
 }
 
 
+/*------------------------------------------jumbotron*/
 
 
 /*---------------------------------footer*/
 
 .footer {
-    background-color: #6B6E6D;
-    color: #DBD5BF;
     font-family: "Karla", sans-serif;
     text-align: center;
     position: absolute;
     width: 100%;
     bottom: 0;
+}
+
+.social-links {
+     transition: all;
+     transition-duration: 0.5s;
+    
 }
 
 
@@ -55,19 +55,29 @@ body {
 
 a {
     transition-property: all;
+    transition-duration: 0.2s;
+    font-weight: bolder;
     color: #DBD5BF;
 }
 
 a:hover {
-    color: #EBF0ED;
+    color: #960A03;
     text-decoration: none;
 }
 
-.social-links {
-    border-radius: 50%;
 
+.social-links {
+    font-size: large;
+     transition: all;
+     transition-timing-function: ease-in-out;
+     transition-duration: 0.2s;
+    
 }
 
+.social-links:hover {
+    color: #960A03;
+    
+}
 
 
 /*--------------------------------------list*/
