--- a/css/style.css
+++ b/css/style.css
@@ -14,13 +14,6 @@ html {
 
 /*-----------------------------container-fluid*/
 
-.container-fluid {
-    width: 100%;
-    margin: 0px;
-
-}
-
-
 /*---------------------------------navbar*/
 
 .navbar {
@@ -35,34 +28,45 @@ html {
     transition-duration: 0.2s;
     font-weight: bolder;
     color: #E6FFFB;
+    flex-wrap: nowrap;
 
 }
 
 
 
 .navbar-light .navbar-nav .nav-link {
-    color: #DDE2E7;
+    color: #EA1201;
+    font-weight: normal;
 }
 
 .navbar-light .navbar-nav .nav-link:hover {
-     color: #960A03;   
+    color: #960A03;
 }
 
 .navbar-light .navbar-nav .active>.nav-link {
-    color: #DDE2E7;
+    color: #EA1201;
+    font-weight: bolder;
+
 }
 
 .navbar-light>.navbar-brand {
-    color: #DDE2E7;
+    background-color: #00002B;
+    margin-right: 50px;
+    padding-right: 50px;
+    color: #1319EB;
     font-size: large;
     transition: all;
     transition-timing-function: ease-in-out;
-    transition-duration: 0.2s;
+
 }
 
 .navbar-light>.navbar-brand:hover {
     color: #960A03;
+
+
 }
+
+
 
 /*---------------------------------footer*/
 
@@ -70,17 +74,19 @@ html {
     font-family: "Karla", sans-serif;
     text-align: center;
     position: absolute;
-    width: 100%;
     bottom: 0px;
+    width: 100%;
+    margin: 0px;
+
 }
 
 
 .social-links {
-    color: #0A1414;
+    color: #EA1201;
     font-size: large;
     transition: all;
     transition-timing-function: ease-in-out;
-    transition-duration: 0.2s;
+
 
 }
 
@@ -91,6 +97,7 @@ html {
 }
 
 
+
 /*--------------------------------------list*/
 
 li {
@@ -99,12 +106,13 @@ li {
     float: left;
 }
 
+
 ul {
     text-align: center;
     display: inline-block;
-    margin: 0;
     padding: 0;
 }
+
 
 /*--------------------------------------img-fluid*/
 
@@ -116,11 +124,17 @@ ul {
 
 /*-------------------------------------------intro-text*/
 
+/*----------------------------------------------media query--*/
 
+@media (max-width:768px) {
+    li {
+        padding-left: 35px;
+    }
 
-/*----------------------------------------------container*/
+}
 
-.container {
-    margin: 0px;
-    padding: 0px;
+@media (min-width: 992px) {
+    .navbar-expand-lg {
+        flex-flow: inherit;
+    }
 }
