--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,6 @@ html {
 
 }
 
-/*-----------------------------container-fluid*/
-
 /*---------------------------------navbar*/
 
 .navbar {
@@ -114,6 +112,7 @@ ul {
 }
 
 
+
 /*--------------------------------------img-fluid*/
 
 .img-fluid {
@@ -122,7 +121,13 @@ ul {
 }
 
 
-/*-------------------------------------------intro-text*/
+/*------------------------------------------container*/
+
+.container {
+    background-color: black;
+    margin-top: 250px;
+    width: 30%;
+}
 
 /*----------------------------------------------media query--*/
 
