--- a/css/style.css
+++ b/css/style.css
@@ -16,68 +16,36 @@ html {
 
 .navbar {
     font-family: "Karla", sans-serif;
-    text-align: center;
     text-transform: uppercase;
-    position: absolute;
-    width: 100%;
-    top: 0;
     padding: 0px;
-    transition-property: all;
-    transition-duration: 0.2s;
     font-weight: bolder;
     color: #E6FFFB;
-    flex-wrap: nowrap;
-
 }
 
 
-
-.navbar-light .navbar-nav .nav-link {
+.navbar-dark .navbar-nav .nav-link {
     color: #EA1201;
     font-weight: normal;
-}
+}       
 
-.navbar-light .navbar-nav .nav-link:hover {
+.navbar-dark .navbar-nav .nav-link:hover {
     color: #960A03;
 }
 
-.navbar-light .navbar-nav .active>.nav-link {
+.navbar-dark .navbar-nav .active>.nav-link {
     color: #EA1201;
     font-weight: bolder;
 
 }
 
-.navbar-light>.navbar-brand {
+.navbar-dark>.navbar-brand {
     background-color: #00002B;
     margin-right: 50px;
     padding-right: 50px;
     color: #1319EB;
-    font-size: large;
-    transition: all;
-    transition-timing-function: ease-in-out;
-
 }
-
-.navbar-light>.navbar-brand:hover {
-    color: #960A03;
-
-
-}
-
-
 
 /*---------------------------------footer*/
-
-.footer {
-    font-family: "Karla", sans-serif;
-    text-align: center;
-    position: absolute;
-    bottom: 0px;
-    width: 100%;
-    margin: 0px;
-
-}
-
 
 .social-links {
     color: #EA1201;
@@ -94,6 +62,14 @@ html {
 
 }
 
+.footer {
+    font-family: "Karla", sans-serif;
+    text-align: center;
+    position: absolute;
+    bottom: 0px;
+
+
+}
 
 
 /*--------------------------------------list*/
@@ -136,10 +112,4 @@ ul {
         padding-left: 35px;
     }
 
-}
-
-@media (min-width: 992px) {
-    .navbar-expand-lg {
-        flex-flow: inherit;
-    }
 }
