--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,17 @@ html {
     background-repeat: no-repeat;
     background-color: black;
     background-size: cover;
+    overflow: scroll;
 
 
 }
+
+/*---------------------------------body*/
+
+body {
+    background-color: transparent;
+}
+
 
 /*---------------------------------navbar*/
 
@@ -26,7 +34,7 @@ html {
 .navbar-dark .navbar-nav .nav-link {
     color: #EA1201;
     font-weight: normal;
-}       
+}
 
 .navbar-dark .navbar-nav .nav-link:hover {
     color: #960A03;
@@ -43,6 +51,13 @@ html {
     margin-right: 50px;
     padding-right: 50px;
     color: #1319EB;
+}
+
+
+/*----------------------------------index.html page content*/
+
+.intro-image {
+   
 }
 
 /*---------------------------------footer*/
@@ -97,13 +112,24 @@ ul {
 }
 
 
+/*------------------------------------------jumbotron*/
+
+.jumbotron {
+    padding: 0px;
+    margin-bottom: 0px;
+    background-color: transparent;
+}
+
+
 /*------------------------------------------container*/
 
 .container {
-    background-color: black;
-    margin-top: 250px;
-    width: 30%;
+    
+    margin-top: 50px;
+
 }
+
+
 
 /*----------------------------------------------media query--*/
 
