--- a/css/style.css
+++ b/css/style.css
@@ -61,12 +61,7 @@ body {
     text-align: center;
 }
 
-.intro-image {
-    bottom: 50%;
-    position: relative;
 
-
-}
 
 /*---------------------------------footer*/
 
@@ -90,15 +85,14 @@ body {
     text-align: center;
     position: absolute;
     bottom: 0px;
-
-
+    background-color: #343a40;
 }
 
 
 /*--------------------------------------list*/
 
 li {
-    padding-left: 150px;
+    padding-left: 100px;
     list-style-type: none;
     float: left;
 }
@@ -107,6 +101,7 @@ li {
 ul {
     text-align: center;
     display: inline-block;
+    margin-top: 0;
     padding: 0;
 }
 
@@ -123,9 +118,10 @@ ul {
 /*------------------------------------------jumbotron*/
 
 .jumbotron {
-    padding: 0px;
+    top: 5em;
     margin-bottom: 0px;
     background-color: transparent;
+    
 }
 
 
