--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,12 @@
 
 html {
     background-image: url("../assets/images/rayi-christian-wicaksono-6PF6DaiWz48-unsplash.jpg");
-    position: fixed;
     min-height: 100%;
     min-width: 100%;
     background-repeat: no-repeat;
     background-color: black;
     background-size: cover;
+    overflow-y: scroll;
 
 
 }
@@ -16,7 +16,6 @@ html {
 
 body {
     background-color: transparent;
-    overflow-y: scroll;
 }
 
 
@@ -24,13 +23,13 @@ body {
 
 .navbar {
     font-family: "Karla", sans-serif;
-    text-transform: uppercase;
     padding: 0px;
     font-weight: bolder;
     color: #E6FFFB;
 }
 
 
+ 
 .navbar-dark .navbar-nav .nav-link {
     color: #EA1201;
     font-weight: normal;
@@ -62,6 +61,9 @@ body {
 }
 
 
+/*--------------------------------------about.html page content*/
+
+
 
 /*---------------------------------footer*/
 
@@ -83,9 +85,10 @@ body {
 .footer {
     font-family: "Karla", sans-serif;
     text-align: center;
-    position: absolute;
+    position: fixed;
     bottom: 0px;
     background-color: #343a40;
+    
 }
 
 
