--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,10 @@ html {
 /*---------------------------------body*/
 
 body {
+
     background-color: transparent;
+    padding-bottom: 60px;
+    padding-top: 60px;
 }
 
 
@@ -29,7 +32,7 @@ body {
 }
 
 
- 
+
 .navbar-dark .navbar-nav .nav-link {
     color: #EA1201;
     font-weight: normal;
@@ -71,43 +74,65 @@ body {
     background-color: #91918E;
     border: 15px solid #7D7D7A;
     padding-bottom: 25px;
-    
-    
-    
+    padding-top: 25px;
+    opacity: 0.9;
+
+
+
 }
 
-.about-image { 
-    background-color: #91918E;
+.about-image {
+    width: 100%;
+    height: 100%;
     border: 15px solid #7D7D7A;
-    padding-bottom: 25px;
     
+
+}
+
+.about-image-container {
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
 .skills {
-     background-color: #91918E;
+    background-color: #91918E;
     border: 15px solid #7D7D7A;
     padding-bottom: 25px;
-    
+    padding-top: 25px;
+    opacity: 0.9;
+
+
 }
 
 .work-history {
     background-color: #91918E;
     border: 15px solid #7D7D7A;
     padding-bottom: 25px;
+    padding-top: 25px;
+    opacity: 0.9;
+}
+
+.work-history-style {
+    padding-left: 0px;
 }
 
 .about-me-p {
     margin: 0px;
     font-size: small;
-    color: #EA1201;
+    text-align: left;
+
 }
 
-.progress { 
+.progress {
     background-color: #5e6164;
 }
 
 .progress-bar {
     background-color: #000000;
+}
+
+h4 {
+    text-decoration-line: underline;
 }
 
 /*---------------------------------footer*/
@@ -125,7 +150,7 @@ body {
 .social-links:hover {
     color: #960A03;
     text-decoration: none;
-  
+
 
 }
 
@@ -134,7 +159,7 @@ body {
     text-align: center;
     bottom: 0px;
     background-color: #343a40;
-    
+
 }
 
 
@@ -142,6 +167,7 @@ body {
 
 li {
     list-style-type: none;
+    text-align: center;
 }
 
 
@@ -162,7 +188,7 @@ li {
     top: 5em;
     margin-bottom: 0px;
     background-color: transparent;
-    
+
 }
 
 
@@ -184,5 +210,3 @@ li {
     }
 
 }
-
-
