--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ body {
     width: 100%;
     height: 100%;
     border: 15px solid #7D7D7A;
-    
+
 
 }
 
@@ -120,6 +120,26 @@ body {
 h4 {
     text-decoration-line: underline;
 }
+
+/*---------------------------------portfolio page content*/
+
+.works-done {
+    background-color: #91918E;
+    border: 15px solid #7D7D7A;
+    opacity: 0.8;
+    font-size: small;
+    text-align: left;
+    
+
+}
+
+.portfolio-p { 
+        margin-top: 15px; 
+        text-align: center;
+        font-weight: bold;
+    
+}
+
 
 /*---------------------------------footer*/
 
@@ -194,10 +214,5 @@ li {
     .social-links {
         margin: 15px;
     }
-    
-    .col-xs-12 {
-        margin: 25px 0px 25px 0px;
-    }
 
 }
-
