--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,7 @@ h4 {
     opacity: 0.8;
     font-size: small;
     text-align: left;
+    padding-bottom: 70px;
     
 
 }
@@ -140,6 +141,10 @@ h4 {
     
 }
 
+.portfolio-image {
+    width: 100%;
+    height: 100%;
+}
 
 /*---------------------------------footer*/
 
@@ -214,5 +219,15 @@ li {
     .social-links {
         margin: 15px;
     }
+    .works-done {
+        padding-bottom: 100px;
+        
+    }
+}
 
+@media (max-width:1024px) {
+    .works-done {
+        padding-bottom: 100px;
+        
+    }
 }
