--- a/css/style.css
+++ b/css/style.css
@@ -169,13 +169,42 @@ h4 {
     opacity: 0.8;
 }
 
+
 .btn {
-    background-color: #91918E;
-    border: 15px solid green;
-    color: black;
+    background-color: black;
+    border: 15px black;
+    color: white;
+    margin: 10px;
+}
+
+.btn:hover {
+    color: #960A03;
+    background-color: black;
+} 
+
+.contact-details {
+    background-color: white;
+    margin-top: 25px;
+    margin-bottom: 35px;
+    text-align: center;
+}
+
+.download-resume { 
+    color: white;
+    font-size: larger;
+    background-color: black;
+    width: 100%;
+    
+    
+}    
+
+.download-resume:hover {
+    text-decoration: none;
+    color: #960A03;
 }
 
 
+    
 /*---------------------------------footer*/
 
 .social-links {
@@ -249,15 +278,18 @@ li {
     .social-links {
         margin: 15px;
     }
-    .works-done {
-        padding-bottom: 100px;
-        
-    }
+
 }
 
 @media (max-width:1024px) {
     .works-done {
         padding-bottom: 100px;
+        
+    }
+    
+    .contact-details-style { 
+        margin-left: 15px;
+        margin-right: 15px;
         
     }
 }
