--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,11 +124,6 @@ h4 {
     text-decoration-line: underline;
 }
 
-.font-weight-bolder {
-    margin-top: 5px;
-    margin-bottom: 10px;
-}
-
 /*---------------------------------portfolio page content*/
 
 .works-done {
@@ -210,6 +205,10 @@ h4 {
     color: #960A03;
 }
 
+.contact-list { 
+    padding-left: 0px;
+    
+}
 
     
 /*---------------------------------footer*/
