--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,9 +27,9 @@ body {
 
 .navbar {
     font-family: "Karla", sans-serif;
-    padding: 0px;
     font-weight: bolder;
     color: #FEF6EA;
+    padding: 0px;
 }
 
 
@@ -63,7 +63,9 @@ body {
 .nav-link {
     margin: 0px 50px 0px 50px;
 }
-
+.navbar.navbar-expand-lg.fixed-top.navbar-dark {
+    background-color: #000000;
+}
 
 
 /*----------------------------------index.html page content*/
@@ -138,6 +140,11 @@ body {
 
 h4 {
     text-decoration: underline;
+}
+
+h6 {
+    margin-top: 10px;
+    margin-bottom: 0px;
 }
 
 /*---------------------------------portfolio page content*/
@@ -252,7 +259,7 @@ h4 {
     font-family: "Karla", sans-serif;
     text-align: center;
     bottom: 0px;
-    background-color: #343a40;
+    background-color: #000000;
 
 }
 
