--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,9 @@ body {
     margin: 0px 15px 0px 15px;
 }
 
-
+.embed-responsive {
+    width: 50%;
+}
 
 
 /*--------------------------------------about.html page content*/
@@ -314,5 +316,9 @@ li {
         margin-left: 15px;
         margin-right: 15px;
 
+    }
+    
+    .embed-responsive {
+        width:80%;
     }
 }
