embed-responsive width changed and opacity to 0.9

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,7 +80,8 @@ body {
 }
 
 .embed-responsive {
-    width: 50%;
+    width: 70%;
+    opacity: 0.9;
 }
 
 
@@ -319,6 +320,6 @@ li {
     }
     
     .embed-responsive {
-        width:80%;
+        width: 90%;
     }
 }
