text-align : centered for portfolio heading

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,6 +179,7 @@ h6 {
 .portfolio-heading {
     margin-bottom: 50px;
     color: #FEF6EA;
+    text-align: center;
 }
 
 /*---------------------------------contact page content*/
