navbar link active color changed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,7 @@ body {
 }
 
 .navbar-dark .navbar-nav .active>.nav-link {
-    color: #FEF6EA;
+    color: #E8FF00;
     font-weight: bolder;
     text-decoration: underline;
 
