padding added to logo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,6 +84,10 @@ body {
     opacity: 0.9;
 }
 
+.logo {
+    padding: 15px;
+}
+
 
 /*--------------------------------------about.html page content*/
 
