--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,13 +209,15 @@ h6 {
 .btn {
     background-color: black;
     border: 15px black;
-    color: #FEF6EA;
+    color: #E8FF00;
     margin: 10px;
 }
 
 .btn:hover {
     color: #E8FF00;
     background-color: black;
+    font-weight: bolder;
+   
 }
 
 
@@ -225,10 +227,11 @@ h6 {
     margin-bottom: 35px;
     text-align: center;
     border-radius: 3px;
+   
 }
 
 .download-resume {
-    color: #FEF6EA;
+    color: #E8FF00;
     font-size: larger;
     background-color: black;
     width: 30%;
@@ -242,6 +245,7 @@ h6 {
 .download-resume:hover {
     text-decoration: none;
     color: #E8FF00;
+    font-weight: bold;
 }
 
 
@@ -251,7 +255,9 @@ h6 {
 
 }
 
-
+.form-control {
+    background-color: white;
+}
 
 
 /*---------------------------------footer*/
