navbar brand padding left added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,7 @@ body {
     background-color: #000000;
     color: #E8FF00;
     font-family: "Caveat", cursive;
+    padding-left: 50px;
     
 }
 
